Boundary values in some public GC options cause crashes

XMLWordPrintable

    • gc
    • b33
    • generic, x86
    • generic

        -XX:CMSSamplingGrain=0
        -XX:DefaultMaxRAMFraction=0
        -XX:DefaultInitialRAMFraction=0
        -XX:MarkSweepAlwaysCompactCount=0
        -XX:TenuredGenerationSizeSupplementDecay=0
        -XX:YoungGenerationSizeSupplementDecay=0

        cause crashes

              Assignee:
              Thomas Schatzl
              Reporter:
              Ekaterina Pavlova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: